--- a/experiment/mynotebook.ipynb
+++ b/experiment/mynotebook.ipynb
@@ -1,31 +1,22 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "S5_k7E2IRGOg"
+      },
       "source": [
         "## **Data Ingestion:**\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "S5_k7E2IRGOg"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "ZAvDnq1Fafg_"
+      },
+      "outputs": [],
       "source": [
         "import pandas as pd\n",
         "import numpy as np\n",
@@ -71,24 +62,50 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "ZAvDnq1Fafg_"
-      },
-      "execution_count": 1,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## **Data cleaning:**"
-      ],
       "metadata": {
         "id": "vuy9n-NPRNPH"
-      }
+      },
+      "source": [
+        "## **Data cleaning:**"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "FaMZdSnguggL",
+        "outputId": "c88e003d-fd97-4561-9fba-2a45bb392696"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 2,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "import re\n",
         "# NLTK for natural language processing\n",
@@ -101,41 +118,15 @@
         "nltk.download('stopwords')   # Downloading stopwords data\n",
         "nltk.download('punkt')       # Downloading tokenizer data\n",
         "nltk.download('wordnet')     # Downloading WordNet data for lemmatization"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "FaMZdSnguggL",
-        "outputId": "c88e003d-fd97-4561-9fba-2a45bb392696"
-      },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping corpora/stopwords.zip.\n",
-            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
-            "[nltk_data]   Unzipping tokenizers/punkt.zip.\n",
-            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n"
-          ]
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "True"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {
+        "id": "s2HzrgqDTYdA"
+      },
+      "outputs": [],
       "source": [
         "\n",
         "\n",
@@ -197,12 +188,23 @@
         "\n",
         "if __name__ == \"__main__\":\n",
         "    main()\n"
-      ],
-      "metadata": {
-        "id": "s2HzrgqDTYdA"
-      },
-      "execution_count": 8,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "base",
+      "language": "python",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.4"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
